--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <h1>Arduino and Raspberry Pi together</h1>
         <br>
-        <img src="Pi-Ar.png" alt=" Arduino and Raspberry Pi" width="1200" height="600">
+        <img src="Pi-Ar.png" alt=" my Arduino and Raspberry Pi" width="1200" height="600">
         
         
         <script src="" async defer></script>
